Neither plugin recorded --add-modules, so an incubator module was invisible
trino found it on the first run, which is what a 106-module reactor with a
209-source-set compile-log reference is for.

`core/trino-main` declares <compilerArgs><arg>${extraJavaVectorArgs}</arg>, and
that property is `--add-modules=jdk.incubator.vector`. --compile-log records it
on 6 of trino's 209 source sets, because it reads javac's own line; SourceSet has
carried an addModules field all along, and CompileInvocation's javadoc even names
trino. Neither build plugin set it at all.

⛔ IT IS NOT REACHABLE BY WIDENING `jmods`. An incubator module is not in the
java.se closure and cannot be added to it: it has to be in the ROOT SET of the
compilation that uses it. Every type in it otherwise reads as "package
jdk.incubator.vector is not visible", the compilation unit is dropped, and a
ParseResult can be refused on the strength of it.

THE GATE, trino core/trino-main through the Maven plugin, parse-only:
    before   exit 0, 1 error   "package jdk.incubator.vector is not visible"
    after    exit 0, 0 errors
and the source sets now carry addModules=[jdk.incubator.vector], as the reference
does.

Both plugins, not just the one with the evidence: a defect found in one is a
hypothesis about the other, which has been right both times it was tested this
week (c8fb38c03 -> c2db4ce98, b809d4927 -> 80e986647). Maven reads
maven-compiler-plugin's <compilerArgs> from the effective model, interpolating
each <arg> on its own because that is how the pom writes it; Gradle reads the
source set's own JavaCompile options.compilerArgs.
⚠ NO CORPUS EXERCISES THE GRADLE PATH -- neither fernflower nor pulsar passes
--add-modules -- so what stands behind that half is the unit test and the
symmetry, not a measurement. Said in the javadoc rather than left to look
measured.

Both javac spellings are read (`--add-modules=a,b` and `--add-modules a,b`);
reading one would be a silent half-answer, which is worse than readin